--- a/css/style.css
+++ b/css/style.css
@@ -411,8 +411,8 @@
 		background: none;
 		border-radius: none;
 		border: 2px solid;
-		border-color: #82b440;
-		color: #82b440;
+		border-color: #cc1461;
+		color: #cc1461;
 		cursor: pointer;
 		display: inline-block;
 		padding: 0.90em 1.2em;
@@ -432,7 +432,7 @@
 		input[type="reset"]:hover,
 		input[type="button"]:hover,
 		.button:hover {
-			background: #82b440;
+			background: #cc1461;
 			color: white;
 		}
 
@@ -449,7 +449,23 @@
 			input[type="button"].alt:hover,
 			.button.alt:hover {
 				background: white;
-				color: #82b440;
+				color: #50b4c8;
+			}
+
+		input[type="submit"].btn-footer,
+		input[type="reset"].btn-footer,
+		input[type="button"].btn-footer,
+		.button.btn-footer {
+			border-color: inherit;
+			color: inherit;
+		}
+
+			input[type="submit"].btn-footer:hover,
+			input[type="reset"].btn-footer:hover,
+			input[type="button"].btn-footer:hover,
+			.button.btn-footer:hover {
+				background: white;
+				color: #000
 			}
 
 		input[type="submit"].fit,
@@ -515,7 +531,7 @@
 
 		.wrapper.style3 {
 			padding-bottom: 6em;
-			background: #82b440;
+			background: #50b4c8;
 			text-align: center;
 			color: white;
 		}
@@ -534,7 +550,7 @@
 		}
 
 		.wrapper.style5 {
-			background: #82b440;
+			background: #f2f2f2;
 			text-align: center;
 			color: white;
 		}
@@ -680,7 +696,7 @@
 		#banner h2 {
 			display: inline-block;
 			padding: 0.50em 0.30em;
-			background: #82b440;
+			background-color: rgba(80, 180, 200, 0.3);
 			font-size: 3em;
 			font-weight: 400;
 		}
@@ -790,7 +806,9 @@
 	}
 
 /* Team */
-
+	#team {
+		color: #555555;
+	}
 	#team h3 {
 		margin-bottom: 0.50em;
 		letter-spacing: 2px;
