--- a/css/style.css
+++ b/css/style.css
@@ -106,7 +106,7 @@
 	}
 
 	header.major {
-		padding-bottom: 3em;
+		padding-bottom: 1em;
 		text-align: center;
 		text-transform: uppercase;
 	}
@@ -114,11 +114,13 @@
 		header.major h2 {
 			font-size: 2.6em;
 			font-weight: 700;
+			line-height: normal;
 		}
 
 		header.major .byline {
 			display: block;
-			padding-top: 1em;
+			padding-top: 0.5em;
+			padding-bottom: 2em;
 			letter-spacing: 1px;
 			font-size: 1.4em;
 		}
@@ -458,6 +460,7 @@
 		.button.btn-footer {
 			border-color: inherit;
 			color: inherit;
+			margin-bottom: 1.5em;
 		}
 
 			input[type="submit"].btn-footer:hover,
@@ -742,7 +745,7 @@
 /* Footer */
 
 	#footer {
-		padding: 6em 0 2em 0;
+		padding: 5em 0 2em 0;
 		text-align: center;
 		color: white;
 	}
@@ -773,7 +776,7 @@
 		position: relative;
 		text-transform: uppercase;
 		text-align: center;
-		padding: 3em 0em 3em 0em;
+		padding: 0em 0em 1em 0em;
 		color: inherit;
 		opacity: .40;
 	}
