--- a/css/style.css
+++ b/css/style.css
@@ -559,7 +559,6 @@
 		}
 
 			.wrapper.style5 .image {
-				display: block;
 				width: 60%;
 				margin: 0em auto 2em auto;
 			}
@@ -814,6 +813,7 @@
 	}
 	#team h3 {
 		margin-bottom: 0.50em;
+		margin-top: 1em;
 		letter-spacing: 2px;
 		text-transform: uppercase;
 		font-weight: 700;
